@@ -68,7 +68,7 @@ AC_ARG_ENABLE(multi,   [  --disable-multi         disable multiple connections],
 AC_ARG_ENABLE(prpls,   [  --disable-prpls         don't build dynamic protocol plugins],,enable_prpls=yes)
 AC_ARG_WITH(static-prpls,    [  --with-static-prpls     link in certain protocols statically],[STATIC_PRPLS=`echo $withval | $sedpath 's/,/ /g'`],STATIC_PRPLS="oscar toc")
 if test "x$STATIC_PRPLS" = "xall" ; then
-	STATIC_PRPLS="gg icq irc jabber msn napster oscar toc yahoo zephyr"
+	STATIC_PRPLS="gg irc jabber msn napster oscar toc yahoo zephyr"
 fi
 AC_SUBST(STATIC_PRPLS)
 STATIC_LINK_LIBS=
@@ -80,7 +80,6 @@ for i in $STATIC_PRPLS ; do
 	load_proto="$load_proto load_protocol(${i}_init, sizeof(struct prpl));"
 	case $i in
 		gg) static_gg=yes ;;
-		icq) static_icq=yes ;;
 		irc) static_irc=yes ;;
 		jabber) static_jabber=yes ;;
 		msn) static_msn=yes ;;
@@ -93,7 +92,6 @@ for i in $STATIC_PRPLS ; do
 	esac
 done
 AM_CONDITIONAL(STATIC_GG, test "x$static_gg" = "xyes")
-AM_CONDITIONAL(STATIC_ICQ, test "x$static_icq" = "xyes")
 AM_CONDITIONAL(STATIC_IRC, test "x$static_irc" = "xyes")
 AM_CONDITIONAL(STATIC_JABBER, test "x$static_jabber" = "xyes")
 AM_CONDITIONAL(STATIC_MSN, test "x$static_msn" = "xyes")
